[package]
name = "qubit-tokio-executor"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-tokio-executor"
description = "Tokio-backed executor and executor service implementations for Qubit Rust libraries"
homepage = "https://github.com/qubit-ltd/rs-tokio-executor"
documentation = "https://docs.rs/qubit-tokio-executor"
readme = "README.md"
keywords = ["tokio", "executor", "async", "concurrency"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_tokio_executor"
doctest = true

[dependencies]
tokio = { version = "1.52", features = ["rt", "sync"] }

qubit-atomic = "0.10"
qubit-function = "0.13"
qubit-executor = "0.3"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
