[package]
name = "qubit-tokio-executor"
version = "0.7.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-tokio-executor"
description = "Tokio-backed executor and executor service implementations for Qubit Rust libraries"
homepage = "https://github.com/qubit-ltd/rs-tokio-executor"
documentation = "https://docs.rs/qubit-tokio-executor"
readme = "README.md"
keywords = ["tokio", "executor", "async", "concurrency"]
categories = ["concurrency", "asynchronous"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_tokio_executor"
doctest = true

[dependencies]
tokio = { version = "1.52", features = ["rt", "sync"] }

qubit-atomic = "0.13"
qubit-function = "0.14"
qubit-executor = "0.6"
qubit-lock = "0.8"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
